--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
 						<li><a href="https://instagram.com/your-profile" class="text-light" target="_blank">Instagram</a></li>
 						<li><a href="https://linkedin.com/in/ade-mulyana" class="text-light" target="_blank">LinkedIn</a></li>
 						<li><a href="https://github.com/ademulyanaDEV" class="text-light" target="_blank">GitHub</a></li>
+						<li><a href="BLS/index.html" class="text-light" target="_blank">RAHASIA</a></li>
 					</ul>
 					<p class="mb-0 mt-3">&copy; 2024 Ade Mulyana. All rights reserved.</p>
 				</div>
