--- a/BLS/index.html
+++ b/BLS/index.html
@@ -271,7 +271,7 @@
               </div>
               <div class="mt-6 md:mt-0 text-center md:text-right">
                 <p class="text-gray-400">&copy; 2024 BlockShift. All rights reserved.</p>
-                <p class="text-gray-400">Designed by <a href="#" class="text-indigo-500 hover:text-indigo-400">Your Name</a></p>
+                <p class="text-gray-400">Designed by <a href="#" class="text-indigo-500 hover:text-indigo-400">Ade Mulyana</a></p>
               </div>
             </div>
           </div>
