--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
 							<li><a href="#skills" class="text-light">Skills</a></li>
 							<li><a href="#projects" class="text-light">Projects</a></li>
 							<li><a href="#contact" class="text-light">Contact</a></li>
+							<li><a href="PRIVA/index.html" class="text-light">PRIVA</a></li>
 						</ul>
 					</div>
 				</div>
